--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,30 @@
-# Prerequisites
-*.d
+# Created by https://www.gitignore.io/api/windows
+# Edit at https://www.gitignore.io/?templates=windows
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
 
-# Precompiled Headers
-*.gch
-*.pch
+# Dump file
+*.stackdump
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# Folder config file
+[Dd]esktop.ini
 
-# Fortran module files
-*.mod
-*.smod
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
 
-# Executables
-*.exe
-*.out
-*.app
+# Windows shortcuts
+*.lnk
+
+# End of https://www.gitignore.io/api/windows
