--- a/Space Trip/Space Trip/Space Trip.vcxproj
+++ b/Space Trip/Space Trip/Space Trip.vcxproj
@@ -180,6 +180,9 @@
   <ItemGroup>
     <Image Include="Planet.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
